log/build_2023-10-29_20-35-36/mocap_pkg/stderr.log
  File "/home/bodlaire/Desktop/Work/Mocap/install/mocap_pkg/lib/python3.8/site-packages/mocap_pkg/mocap_node.py", line 27
    /aimotion_mocap_node/rigid_bodies/<id>/pose
    ^
SyntaxError: invalid syntax

